# fbthrift

./: .gitignore  AGENTS.md  CLAUDE.md  LEADERSHIP_BRIEFING_TALK_TRACK.md  POLLING_IDLE_RESEARCH_SURVEY.md  stresstest_client_eventbase_analysis.txt  需求文档.md
docs/: shm-busypoll-transport-design.md
docs/superpowers/plans/: 2026-07-22-hwqueue-poll-idle-three-page-decks.md  2026-07-22-poll-idle-readme-expansion.md
docs/superpowers/specs/: 2026-07-22-hwqueue-poll-idle-three-page-decks-design.md  2026-07-22-poll-idle-readme-expansion-design.md
outputs/: gqm_rpc_sensitivity_sweep_3page_zh.pptx  gqm_rpc_sensitivity_sweep_zh.pptx  poll_idle_poisson_350qps_3page_zh.pptx  poll_idle_poisson_350qps_zh.pptx
thrift/: CMakeLists.txt
thrift/doc/ubmem/: CXL_MEM_USERSPACE_COMM_LIB_V1_REQUIREMENTS.md  UBMEM_TRANSPORT_IMPLEMENTATION_SCHEME.md  UBMEM_URMA_COMMUNICATION_LIBRARY_ARCHITECTURE_V3.pptx
thrift/lib/cpp2/: CMakeLists.txt
thrift/lib/cpp2/server/: Cpp2Worker.cpp  IOWorkerContext.h  ThriftServer.h
thrift/lib/cpp2/transport/rocket/sharedmemory/: SharedMemoryRocketChannel.cpp  SharedMemoryRocketChannel.h
thrift/lib/cpp2/transport/rocket/sharedmemory/examples/: SharedMemoryExample.cpp
thrift/perf/: CMakeLists.txt
thrift/perf/cpp2/: BENCHMARK_SERVER_WALKTHROUGH.md  CMakeLists.txt  CXL_MEM_BUSY_POLL_EVENTBASE_PORTING_GUIDE.md  CXL_MEM_BUSY_POLL_EVENTBASE_VALIDATION_CONCLUSION.md  README.md  SERVER_BOOTSTRAP_CHEATSHEET.md  TESTING_GUIDE.zh.md  build.sh  parse_results.py  run_benchmark.sh
thrift/perf/cpp2/client/: Client.cpp
thrift/perf/cpp2/performance/: AGENT_PROTOCOL.md  EDR_SYSTEM_DESIGN.md  EDR_SYSTEM_IMPLEMENTATION_PLAN.md  FRONTIER.md  MAINTENANCE_GUIDE.zh.md  README.md  validate_edr.py
thrift/perf/cpp2/performance/analysis/gqm_injected_delay_sweep/: README.md  pyproject.toml
thrift/perf/cpp2/performance/analysis/gqm_injected_delay_sweep/data/: SOURCE.md  cpp2_closed_loop_gqm_delay_sweep.csv  gqm_delay_sweep_35000qps.csv  gqm_microbenchmark.csv  rpc_baseline_qps_sweep.csv  va_flat_compressed_polling_gqm_delay_sweep.csv
thrift/perf/cpp2/performance/analysis/gqm_injected_delay_sweep/src/: gqm_delay_analysis.py
thrift/perf/cpp2/performance/analysis/gqm_injected_delay_sweep/tests/: test_gqm_delay_analysis.py
thrift/perf/cpp2/performance/analysis/poll_idle_poisson_350qps/: README.md  pyproject.toml
thrift/perf/cpp2/performance/analysis/poll_idle_poisson_350qps/data/: poisson_exp_350qps_unary64.csv
thrift/perf/cpp2/performance/analysis/poll_idle_poisson_350qps/src/: poll_idle_analysis.py
thrift/perf/cpp2/performance/analysis/poll_idle_poisson_350qps/tests/: test_poll_idle_analysis.py
thrift/perf/cpp2/performance/edr/: EDR-0001-cxl-hot-shard-busy-poll-eventbase.md  EDR-0002-gqm-injected-delay-rpc-sweep.md  EDR-0003-gqm-fixed-outstanding-path-sensitivity.md
thrift/perf/cpp2/performance/templates/: EDR_TEMPLATE.md
thrift/perf/cpp2/performance/tests/: test_validate_edr.py
thrift/perf/cpp2/server/: Server.cpp
thrift/perf/cpp2/test/: CxlMemBenchmarkTransportTest.cpp
thrift/perf/cpp2/util/: Counter.h  CxlMemBenchmarkTransport.cpp  CxlMemBenchmarkTransport.h  Operation.h  QPSStats.h  Runner.h  Util.cpp  Util.h
